# Campus-Chat

./: .gitignore  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  server.py
be/: .gitignore  .null-ls_102498_server.py  .null-ls_123344_handlers.py  Dockerfile  db.py  handlers.py  pyproject.toml  server.py  services.py
be/channel/: channels.py
be/message/: messages.py
be/tests/: __init__.py  in_memory_repo.py  test_handlers.py  test_users.py
be/user/: users.py
fe/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
fe/src/: App.tsx  CreateProfile.tsx  index.css  main.tsx  module.ts  selectChannel.tsx  types.ts  useListChannels.tsx  useLocalStorage.tsx  useMessages.tsx
fe/src/components/: ChatBox.tsx  Messages.tsx  Navbar.tsx
