[project]
name = "campus-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "trio>=0.31.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]
[tool.pytest.ini_options]
pythonpath = [
  ".", "tests"
]
